--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "cross-env NODE_ENV=production vite build"
   },
   "dependencies": {
+    "file-selector": "^0.2.4",
     "vue": "^3.0.11",
     "vue-router": "^4.0.6"
   },
