--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "cross-env NODE_ENV=production vite build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "file-selector": "^0.2.4",
     "vue": "^3.0.11",
     "vue-router": "^4.0.6"
