--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,7 @@
 [build]
   ignore = "git diff --quiet HEAD^ HEAD src index.html"
   publish = "dist"
-  command = "yarn run build"
-
-[build.environment]
-  NODE_VERSION = "12"
+  command = "pnpm build"
 
 [[redirects]]
   from = "/*"
